--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,23 +10,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.1.0
-  provider: ^6.1.1
-  shared_preferences: ^2.2.2
-  intl: ^0.19.0
-
-  # The following adds the Cupertino Icons font to your application.
+  
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  # Main dependencies
   http: ^1.2.2
-  shared_preferences: ^2.3.5
-  image_picker: ^1.1.2
   provider: ^6.1.2
+  shared_preferences: ^2.2.2
+  intl: ^0.19.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
